# auto-click

./: CMakeLists.txt  README.md  widget.cpp  widget.h  widget.ui
